与ha通过ws建立连接并通过认证

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,4 +3,11 @@ server:
 spring:
   config:
     import: application-home.yml
-
+  application:
+    name: home-assistant-helper
+logging:
+  pattern:
+    console: "[%-12d{HH:mm:ss.SSS}][%-5level][%-50logger{50} :%-3L][%-25thread] %msg%n"
+    file: "[%-12d{HH:mm:ss.SSS}][%-5level][%-50logger{50} :%-3L][%-25thread] %msg%n"
+  file:
+    name: logs/${spring.application.name}.log
