--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,10 @@
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-json</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
