修改默认连接本地测试ha

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 40002
 spring:
   config:
-    import: application-home.yml
+    import: application-home-demo.yml
   application:
     name: home-assistant-helper
 logging:
